
  libparted-fs-resize: Prevent crash resizing FAT16 file systems.

  If the user specifies start/end of the partition as cylinders
  and a cylinder has a size which is power of 2, then such address
  does not trigger exact placement.

  mkpart: Allow negative start value when FS-TYPE is not given

* Noteworthy changes in release 3.2 (2014-07-28) [stable]

** New Features

  libparted-fs-resize: Work on non 512 byte sectors.

  Add resizepart command to resize a partition.  This works even on
  mounted partitions.

  Add support for EAV DASD partitions, which are ECKD's with more than
  65520 cylinders.

  Add support for implicit FBA DASD partitions with a single immutable
  partition.

  Added support for recognizing btrfs filesystem. This simply displays
  btrfs in the 'file system' column of the parted output.

  Added new partition type flag, esp, to set the type to 0xEF on MS-DOS.
  Also aliased to boot on GPT to set the UEFI ESP GUID.

  Added new partition type flag, irst, for use with Intel Rapid Start
  Technology. On MS-DOS disk labels it sets the type to 0x84 and on GPT
  it sets the GUID to D3BFE2DE-3DAF-11DF-BA-40-E3A556D89593.

  You can now choose to ignore errors about partitions that overlap,
  or are longer than the disk.  This allows you to use parted to
  repair the problem.

  Add support for prep flag to GPT to select PowerPC Reference Platform
  boot partition type.

** Bug Fixes

  libparted: fix mac partition tables on > 512 byte sector sizes

  libparted: ped_partition_get_path() was returning "/dev/foo1" instead
  of "/dev/foo" for loop labels.

  partprobe: when called on a disk that has become a loop label,
  remove any partitions left over from a previous label.

  libparted: The loop label represents an unpartitioned disk, but creates
  a dummy partition to represent the whole disk.  This dummy partition
  was actually being loaded into the kernel.  Don't do that.

  libparted: fix loop labels to not vanish if you don't create