@@ -47,6 +47,8 @@ GNU parted NEWS                                    -*- outline -*-
 
 ** New Features
 
+  Add support for MBR id, GPT GUID and detection of UDF filesystem.
+
   libparted-fs-resize: Work on non 512 byte sectors.
 
   Add resizepart command to resize a partition.  This works even on
